--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# === Node.js ===
+node_modules/
+.next/
+out/
+dist/
+.cache/
 
-# dependencies
-/node_modules
-/.pnp
+# === Environment ===
+.env*
+*.pem
+
+# === TypeScript ===
+*.tsbuildinfo
+next-env.d.ts
+
+# === Logs ===
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# === IDEs ===
+.vscode/
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Icon?
+
+# === Yarn v2+
+.pnp/
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -10,32 +35,11 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# === Test Coverage ===
+/coverage/
 
-# next.js
-/.next/
-/out/
+# === Vercel ===
+.vercel/
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# === Build Output ===
+/build/
